# AnomalyDetection

./: Book1.csv  CLI.cpp  CLI.h  CMakeLists.txt  HybridAnomalyDetector.cpp  HybridAnomalyDetector.h  MainTrain.cpp  MainTrainEX2.cpp  README.md  Server.cpp  Server.h  SimpleAnomalyDetector.cpp  SimpleAnomalyDetector.h  anomaly_detection_util.cpp  anomaly_detection_util.h  commands.h  main.cpp  minCircle.cpp  minCircle.h  timeseries.cpp  timeseries.h
ex1_BU/: MainTrain.cpp  anomaly_detection_util.cpp
